added javascript and revised css to pomodoro timer page

--- a/public/reading.html
+++ b/public/reading.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel = "stylesheet" href = "scss/main.scss">
         <title>Studbud</title>
+        <link rel="icon" type="image/x-icon" href="images/Logo.png"> <!--adds favicon to page-->
     </head>
     <body>
 
